--- a/index.html
+++ b/index.html
@@ -4,83 +4,116 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
+  <link rel="stylesheet" href="./assets/css/index.css">
   <title>Frontend Mentor | Clipboard landing page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  A history of everything you copy
-
-  Clipboard allows you to track and organize everything you 
-  copy. Instantly access your clipboard on all your devices.
-
-  Download for iOS
-  Download for Mac
-
-  Keep track of your snippets
-
-  Clipboard instantly stores any item you copy in the cloud, 
-  meaning you can access your snippets immediately on all your 
-  devices. Our Mac and iOS apps will help you organize everything.
-
-  Quick Search
-
-  Easily search your snippets by content, category, web address, application, and more.
-
-  iCloud Sync
-
-  Instantly saves and syncs snippets across all your devices.
-
-  Complete History
-
-  Retrieve any snippets from the first moment you started using the app.
-
-  Access Clipboard anywhere
-
-  Whether you’re on the go, or at your computer, you can access all your Clipboard 
-  snippets in a few simple clicks.
-
-  Supercharge your workflow
-
-  We’ve got the tools to boost your productivity.
-
-  Create blacklists
-
-  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
-
-  Plain text snippets
-
-  Remove unwanted formatting from copied text for a consistent look.
-
-  Sneak preview
-
-  Quick preview of all snippets on your Clipboard for easy access.
-
-  Clipboard for iOS and Mac OS
-
-  Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
-  and you’re ready to start adding to your clipboard.
-
-  Download for iOS
-  Download for Mac
-
-  FAQs
-  Contact Us
-  Privacy Policy
-  Press Kit
-  Install Guide
-  
+  <header class="flex-column">
+    <figure>
+      <img src="./assets/images/logo.svg" alt="Clipboard logo">
+    </figure>
+    <h1>A history of everything you copy</h1>
+    <p>Clipboard allows you to track and organize everything you copy.
+       Instantly access your clipboard on all your devices.
+    </p>
+      <div class="buttons flex-column flex-row">
+        <button class="ios">Download for iOS</button>
+        <button class="mac">Download for Mac</button>
+      </div>
+  </header>
+  <main>
+    <section class="track flex-column">
+      <h2>Keep track of your snippets</h2>
+      <p>Clipboard instantly stores any item you copy in the cloud, 
+        meaning you can access your snippets immediately on all your 
+        devices. Our Mac and iOS apps will help you organize everything.
+      </p>
+      <div class="computer flex-column flex-row">
+        <figure>
+          <img src="./assets/images/image-computer.png" loading="lazy" alt="Computer monitor with green checkbox in center of screen">
+        </figure>
+        <div class="snippets flex-column">
+          <div>
+            <h3>Quick Search</h3>
+            <p>Easily search your snippets by content, category, web address, application, and more.</p>
+          </div>
+          <div>
+            <h3>iCloud Sync</h3>
+            <p>Instantly saves and syncs snippets across all your devices.</p>
+          </div>
+          <div>
+            <h3>Complete History</h3>
+            <p>Retrieve any snippets from the first moment you started using the app.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="clipboard flex-column">
+      <h2>Access Clipboard anywhere</h2>
+      <p>Whether you’re on the go, or at your computer, you can access all your Clipboard 
+          snippets in a few simple clicks.</p>
+      <img src="./assets/images/image-devices.png" loading="lazy" alt="Mobile phone and tablet with box with green check in the center of the screen">
+    </section>
+    <section class="workflow flex-column">
+      <h2>Supercharge your workflow</h2>
+      <p>We’ve got the tools to boost your productivity.</p>
+      <div class="tools flex-column">
+        <div class="tools-item flex-column">
+          <img src="./assets/images/icon-blacklist.svg" loading="lazy" alt="">
+          <h3>Create blacklists</h3>
+          <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
+        </div>
+        <div class="tools-item flex-column">
+          <img src="./assets/images/icon-text.svg" loading="lazy" alt="">
+          <h3>Plain text snippets</h3>
+          <p>Remove unwanted formatting from copied text for a consistent look.</p>
+        </div>
+        <div class="tools-item flex-column">
+          <img src="./assets/images/icon-preview.svg" loading="lazy" alt="">
+          <h3>Sneak preview</h3>
+          <p>Quick preview of all snippets on your Clipboard for easy access.</p>
+        </div>
+      </div>
+      <div class="logos flex-column flex-row">
+        <img src="./assets/images/logo-google.png" loading="lazy" alt="Google logo">
+        <img src="./assets/images/logo-ibm.png" loading="lazy" alt="Ibm logo">
+        <img src="./assets/images/logo-microsoft.png" loading="lazy" alt="Microsoft logo">
+        <img src="./assets/images/logo-hp.png" loading="lazy" alt="Hp logo">
+        <img src="./assets/images/logo-vector-graphics.png" loading="lazy" alt="Vector Graphics logo">
+      </div>
+    </section>
+    <section class="download flex-column">
+      <h2>Clipboard for iOS and Mac OS</h2>
+      <p>
+        Available for free on the App Store. Download for Mac or iOS, sync with iCloud 
+         and you’re ready to start adding to your clipboard.
+      </p>
+      <div class="buttons flex-column flex-row">
+        <button class="ios">Download for iOS</button>
+        <button class="mac">Download for Mac</button>
+      </div>
+    </section>
+  </main>
+  <nav class="nav flex-column">
+      <figure><img src="./assets/images/logo.svg" loading="lazy" alt="Clipboard logo"></figure>
+      <div class="anchors flex-column">
+        <p><a href="#">FAQs</a></p>
+        <p><a href="#">Contact Us</a></p>
+        <p><a href="#">Privacy Policy</a></p>
+        <p><a href="#">Press Kit</a></p>
+        <p><a href="#">Install Guide</a></p>
+      </div>
+    <div class="social-media">
+      <img src="./assets/images/icon-facebook.svg" loading="lazy" alt="" title="Facebook">
+      <img src="./assets/images/icon-twitter.svg" loading="lazy" alt="" title="Twitter">
+      <img src="./assets/images/icon-instagram.svg" loading="lazy" alt="" title="Instagram">
+    </div>
+  </nav>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://www.linkedin.com/in/anahitareismonezi/" target="_blank">Anahita Monezi</a>.
     </p>
   </footer>
 </body>
