--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </p>
       <div class="computer flex-column flex-row">
         <figure>
-          <img src="./assets/images/image-computer.png" loading="lazy" alt="Computer monitor with green checkbox in center of screen">
+          <img src="./assets/images/image-computer.png" alt="Computer monitor with green checkbox in center of screen">
         </figure>
         <div class="snippets flex-column">
           <div>
@@ -53,34 +53,34 @@
       <h2>Access Clipboard anywhere</h2>
       <p>Whether you’re on the go, or at your computer, you can access all your Clipboard 
           snippets in a few simple clicks.</p>
-      <img src="./assets/images/image-devices.png" loading="lazy" alt="Mobile phone and tablet with box with green check in the center of the screen">
+      <img src="./assets/images/image-devices.png" alt="Mobile phone and tablet with box with green check in the center of the screen">
     </section>
     <section class="workflow flex-column">
       <h2>Supercharge your workflow</h2>
       <p>We’ve got the tools to boost your productivity.</p>
       <div class="tools flex-column">
         <div class="tools-item flex-column">
-          <img src="./assets/images/icon-blacklist.svg" loading="lazy" alt="">
+          <img src="./assets/images/icon-blacklist.svg" alt="">
           <h3>Create blacklists</h3>
           <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
         </div>
         <div class="tools-item flex-column">
-          <img src="./assets/images/icon-text.svg" loading="lazy" alt="">
+          <img src="./assets/images/icon-text.svg" alt="">
           <h3>Plain text snippets</h3>
           <p>Remove unwanted formatting from copied text for a consistent look.</p>
         </div>
         <div class="tools-item flex-column">
-          <img src="./assets/images/icon-preview.svg" loading="lazy" alt="">
+          <img src="./assets/images/icon-preview.svg" alt="">
           <h3>Sneak preview</h3>
           <p>Quick preview of all snippets on your Clipboard for easy access.</p>
         </div>
       </div>
       <div class="logos flex-column flex-row">
-        <img src="./assets/images/logo-google.png" loading="lazy" alt="Google logo">
-        <img src="./assets/images/logo-ibm.png" loading="lazy" alt="Ibm logo">
-        <img src="./assets/images/logo-microsoft.png" loading="lazy" alt="Microsoft logo">
-        <img src="./assets/images/logo-hp.png" loading="lazy" alt="Hp logo">
-        <img src="./assets/images/logo-vector-graphics.png" loading="lazy" alt="Vector Graphics logo">
+        <img src="./assets/images/logo-google.png" alt="Google logo">
+        <img src="./assets/images/logo-ibm.png" alt="Ibm logo">
+        <img src="./assets/images/logo-microsoft.png" alt="Microsoft logo">
+        <img src="./assets/images/logo-hp.png" alt="Hp logo">
+        <img src="./assets/images/logo-vector-graphics.png" alt="Vector Graphics logo">
       </div>
     </section>
     <section class="download flex-column">
@@ -96,7 +96,7 @@
     </section>
   </main>
   <nav class="nav flex-column">
-      <figure><img src="./assets/images/logo.svg" loading="lazy" alt="Clipboard logo"></figure>
+      <figure><img src="./assets/images/logo.svg" alt="Clipboard logo"></figure>
       <div class="anchors flex-column">
         <p><a href="#">FAQs</a></p>
         <p><a href="#">Contact Us</a></p>
@@ -105,9 +105,9 @@
         <p><a href="#">Install Guide</a></p>
       </div>
     <div class="social-media">
-      <img src="./assets/images/icon-facebook.svg" loading="lazy" alt="" title="Facebook">
-      <img src="./assets/images/icon-twitter.svg" loading="lazy" alt="" title="Twitter">
-      <img src="./assets/images/icon-instagram.svg" loading="lazy" alt="" title="Instagram">
+      <img src="./assets/images/icon-facebook.svg" alt="" title="Facebook">
+      <img src="./assets/images/icon-twitter.svg" alt="" title="Twitter">
+      <img src="./assets/images/icon-instagram.svg" alt="" title="Instagram">
     </div>
   </nav>
   <footer>
